BUG-DFC-13096-Exam-results-helpline-Hide-show-message-option-overlaps-the-banner-title
Added !important to overwrite the class for mobile view

--- a/src/gds_toolkit/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_toolkit/assets/src/frontend/sass/includes/_custom.scss
@@ -131,8 +131,8 @@
       .global-bar-message-container {
         .global-bar__dismiss {
           margin-left:50px;
-          position: relative;
-          margin-top: 20px;
+          position: relative !important;
+          margin-top: 20px !important;
         }
       }
     }
